--- a/src/sass/dashboard/_mesgthread.scss
+++ b/src/sass/dashboard/_mesgthread.scss
@@ -17,15 +17,12 @@
     justify-content: center;
     align-items: center;
     gap: 1.5rem;
-    
+
     .logo {
-      // border: 1px solid red;
       width: max(100px, 10%);
       filter: $dropShadow;
-      position: relative;
-      z-index: 1;
     }
-
+  
     h3 {
       font-size: $h4;
       color: $primaryColor;
